--- a/style/detail.css
+++ b/style/detail.css
@@ -8,9 +8,9 @@
     
 }
 
-  .favorit{
-    width: 60px;
-    margin: 2em;
+  .favCat{
+    width: 70px;
+    margin: 1em;
     float: right;
     padding: 1em 1em;
 border-radius: 20%;
@@ -56,13 +56,9 @@ img{
     padding: 11px;
     background-color: #0E172C;
     color: white;
-    text-decoration: none;
   
 }
 .card-img-top{
     width: 300px;
 }
 
-.card-logo{
-width: 38px;
-}
