--- a/style/user.css
+++ b/style/user.css
@@ -16,8 +16,8 @@
 } 
 
 .edit {
-    width: 30px;
-    height: 45px;
+    width: 100%;
+    height: 50%;
     left: 0px;
     border: 1px solid #535353;
     margin: 2px 0px;
